CollectionPtr created in the Database init code should not be yieldable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2023-02-20
    • 160
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Creating yieldable CollectionPtr may trip invariant that the namespace is locked which may not be the case during Database initialization. No need for the CollectionPtr to be yieldable as it is never passed to Query.

            Assignee:
            Henrik Edin
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: