SERVER-73985 Database init code should not create a yieldable CollectionPtr

We may not hold locks on the namespace which triggers an invariant in the yieldable code.